--- a/src/njk/pages/courses.njk
+++ b/src/njk/pages/courses.njk
@@ -1,9 +1,9 @@
-{% extends "layout.njk" %} 
+{% extends "layout.njk" %}
 {% set pageTitle = 'Courses' %}
 {% set pageType = 'Courses' %}
 {% block head %}
 <title>{{ pageTitle }} | {{ siteName }}</title>
-{% endblock %} 
+{% endblock %}
 
 {% block content %}
 <main id="main">
@@ -16,38 +16,45 @@
         <div class="wrapper wrapper-overlap">
             <div class="container">
 
+				<div class="row mb-4">
+					<div class="col-lg-10 offset-lg-1 text-center">
+						<h2 class="heading">Etiam Aliquam Ultricies Mi, Vel Blandit est Tempus Nec</h2>
+						<p class="lead">Morbi aliquet magna et diam feugiat lacinia. Vestibulum molestie lectus sed tellus rhoncus luctus. Fusce accumsan ultrices diam sit amet pretium. Pellentesque nec imperdiet ante. Nam consequat tellus nec est placerat scelerisque. Nam ullamcorper elit velit, ut lacinia lorem blandit a.</p>
+					</div>
+				</div>
+
 				<!-- Subject Cards -->
 				<div class="card-icons card-icons--subjects">
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/smile-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Management and Supervision</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/chart-bars-b.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Lean Six Sigma and Project Management</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/pencil-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Test Preparation</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/highlight-b.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Fine Arts</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/laptop-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Microsoft Office</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/leaf-b.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Personal Enrichment</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/bubble-w.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">Foreign Languages</div>
 					</a>
 					<a href="search.html" class="card-icons__link">
-						<img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+						<img src="{{ includePath }}images/icons/sun-b.svg" alt="" class="img-fluid card-icons__icon" />
 						<div class="card-icons__text">OLLI (Ages 50+)</div>
 					</a>
 				</div>
