--- a/src/njk/templates/partials/component/card-icons.njk
+++ b/src/njk/templates/partials/component/card-icons.njk
@@ -1,6 +1,6 @@
 <div class="card-icons">
     <a href="certificate-programs.html" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+        <img src="{{ includePath }}images/icons/license-w.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Certificate Programs</div>
     </a>
     <a href="courses.html" class="card-icons__link">
@@ -8,19 +8,19 @@
         <div class="card-icons__text">Individual Courses</div>
     </a>
 	<a href="#" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+        <img src="{{ includePath }}images/icons/film-play-w.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Webinars and Info Sessions</div>
     </a>
-	<a href="#" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+	<a href="olli.html" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/sun-b.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">OLLI (ages 50+)</div>
     </a>
-	<a href="#" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+	<a href="corporate.html" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/apartment-w.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Corporate Training</div>
     </a>
 	<a href="#" class="card-icons__link">
-        <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+        <img src="{{ includePath }}images/icons/star-b.svg" alt="" class="img-fluid card-icons__icon" />
         <div class="card-icons__text">Military Service Members</div>
     </a>
 </div>
