--- a/src/njk/templates/partials/component/carousel-testimonial-photos.njk
+++ b/src/njk/templates/partials/component/carousel-testimonial-photos.njk
@@ -13,35 +13,11 @@
                 <div class="carousel-item active">
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
-                            <div class="carousel__thumb">
+                             <a href="https://youtu.be/toDyEVIFph4?t=1m54s" target="_blank" rel="noopener" class="carousel__thumb">
                                 <figure class="image image-1by1">
-                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
+									<img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                                 </figure>
-                            </div>
-                        </div>
-                        <!-- /.col-md-4 col-lg-3 -->
-                        <div class="col-md-8 col-lg-9">
-                            <div class="wysiwyg">
-                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
-                            </div>
-                            <!-- /.wysiwyg -->
-                            <div class="carousel-testimonial__name">Alex Hvostik</div>
-                            <div class="carousel-testimonial__title">Business Intelligence</div>
-                        </div>
-                        <!-- /.col-md-8 col-lg-9 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.carousel-item -->
-				
-				<div class="carousel-item">
-                    <div class="row">
-                        <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
-                            <div class="carousel__thumb">
-                                <figure class="image image-1by1">
-                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
-                                </figure>
-                            </div>
+							</a>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
@@ -61,11 +37,35 @@
 				<div class="carousel-item">
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
-                            <div class="carousel__thumb">
+                             <a href="https://youtu.be/toDyEVIFph4?t=1m54s" target="_blank" rel="noopener" class="carousel__thumb">
                                 <figure class="image image-1by1">
                                     <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                                 </figure>
+                            </a>
+                        </div>
+                        <!-- /.col-md-4 col-lg-3 -->
+                        <div class="col-md-8 col-lg-9">
+                            <div class="wysiwyg">
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
+                            <!-- /.wysiwyg -->
+                            <div class="carousel-testimonial__name">Alex Hvostik</div>
+                            <div class="carousel-testimonial__title">Business Intelligence</div>
+                        </div>
+                        <!-- /.col-md-8 col-lg-9 -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.carousel-item -->
+
+				<div class="carousel-item">
+                    <div class="row">
+                        <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
+                            <a href="https://youtu.be/toDyEVIFph4?t=1m54s" target="_blank" rel="noopener" class="carousel__thumb">
+                                <figure class="image image-1by1">
+                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
+                                </figure>
+                            </a>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
