--- a/src/njk/templates/partials/component/cta-sidebar-alt.njk
+++ b/src/njk/templates/partials/component/cta-sidebar-alt.njk
@@ -1,7 +1,7 @@
-<div class="sidebar-cta sidebar-cta-magenta">
+<div class="sidebar-cta sidebar-cta-purple">
     <img src="{{ includePath }}images/icons/calendar-w.svg" alt="" class="img-fluid mb-3 icon-md">
-    <p class="h5 subheading text-white">Next course starts:</p>
-    <div class="font-weight-bold small">Friday, June 23</div>
-    <div class="small">12 PM - 5 PM EST</div>
+    <p class="h5 subheading text-white">Next Course Starts:</p>
+    <div class="font-weight-bold small">Saturday, Sept 25</div>
+    <div class="small">8:30 a.m.–5:30 p.m.</div>
 </div>
 <!-- /.gradient-hz-blue -->
