--- a/src/njk/templates/partials/component/feed-events.njk
+++ b/src/njk/templates/partials/component/feed-events.njk
@@ -4,22 +4,43 @@
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Health Coach</h3>
-					<span class="font-weight-bold">Tuesday, January 9</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Tuesday, January 9</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Digital Photography</h3>
-					<span class="font-weight-bold">Thursday, January 11</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Thursday, January 11</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Fundraising</h3>
-					<span class="font-weight-bold">Tuesday, February 6</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Tuesday, February 6</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 		</ul>
@@ -30,22 +51,43 @@
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Au Pair</h3>
-					<span class="font-weight-bold">Wednesday, February 21</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Wednesday, February 21</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Essentials of HR Management</h3>
-					<span class="font-weight-bold">Thursday, March 8</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Thursday, March 8</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 			<li>
 				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
 					<h3 class="links-feed__title">Essentials of HR Management</h3>
-					<span class="font-weight-bold">Friday, March 30</span>
-					<span>at 7:00 p.m.</span>
+					<div class="links-feed__item">
+						<div class="links-feed__icon">
+							<img src="{{ includePath }}images/icons/calendar.svg" alt="" class="img-fluid icon-sm" />
+						</div>
+						<div class="links-feed__text">
+							<span class="font-weight-bold">Friday, March 30</span>
+							<span>at 7:00 p.m.</span>
+						</div>
+					</div>
 				</a>
 			</li>
 		</ul>
