--- a/src/njk/templates/partials/component/feed-news.njk
+++ b/src/njk/templates/partials/component/feed-news.njk
@@ -6,7 +6,7 @@
 				<div class="wysiwyg">
 					<p>Our new lineup of half-day workshops includes coaching, delegating, Microsoft Excel, leadership and other management/supervisory skills courses.</p>
 				</div>
-				<div class="btn btn-primary mb-2">All Half-Day Workshops</div>
+				<div class="btn btn-accent-1 mb-2">All Half-Day Workshops</div>
 			</a>
 		</div>
 		<div class="col-md-6 mb-5">
