--- a/src/njk/templates/partials/component/sidebar-card.njk
+++ b/src/njk/templates/partials/component/sidebar-card.njk
@@ -1,6 +1,11 @@
 <div class="sidebar-card">
 
-    <ul class="sidebar-card__section">
+    <div class="sidebar-card__section bg-gray-200">
+		<a href="#" class="btn btn-secondary btn-lg btn-block">Register Course</a>
+    </div>
+    <!-- /.sidebar-card__section -->
+
+	<ul class="sidebar-card__section">
 
         <li class="sidebar-card__item">
             <div class="sidebar-card__icon">
@@ -8,7 +13,7 @@
             </div>
             <!-- /.sidebar-card__icon -->
             <div class="sidebar-card__info">
-                Big Data (15SPT17)
+                Big Data
             </div>
             <!-- /.sidebar-card__info -->
         </li>
@@ -20,8 +25,8 @@
             </div>
             <!-- /.sidebar-card__icon -->
             <div class="sidebar-card__info">
-                <div class="font-weight-bold">Friday, June 23</div>
-                <div>12 PM - 5 PM EST</div>
+                <div class="font-weight-bold">Sat, Sep 15–Nov 17, 2018</div>
+                <div>8:30 a.m.–5:30 p.m.</div>
             </div>
             <!-- /.sidebar-card__info -->
         </li>
@@ -33,7 +38,7 @@
             </div>
             <!-- /.sidebar-card__icon -->
             <div class="sidebar-card__info">
-                <a href="#">
+                <a href="https://goo.gl/maps/FYMoekTrmHJ2" target="_blank" rel="noopener">
                     <address>
                         6 Executive Park Dr NE,
                         <br> Atlanta,
@@ -51,20 +56,8 @@
             </div>
             <!-- /.sidebar-card__icon -->
             <div class="sidebar-card__info">
-                <div>80 Hours classroom</div>
+                <div>80 classroom hours</div>
                 <div>(10 Saturdays)</div>
-            </div>
-            <!-- /.sidebar-card__info -->
-        </li>
-        <!-- /.sidebar-card__item -->
-
-        <li class="sidebar-card__item">
-            <div class="sidebar-card__icon">
-                <img src="{{ includePath }}images/icons/bookmark.svg" alt="" class="img-fluid">
-            </div>
-            <!-- /.sidebar-card__icon -->
-            <div class="sidebar-card__info">
-                CEUs: 8.0
             </div>
             <!-- /.sidebar-card__info -->
         </li>
@@ -79,12 +72,6 @@
             <div>$3,995</div>
         </div>
         <!-- /.sidebar-card__item -->
-        <div class="sidebar-card__item d-flex justify-content-between">
-            <div class="font-weight-bold">Deposit:</div>
-            <div>$500</div>
-        </div>
-        <!-- /.sidebar-card__item -->
-        <a href="#" class="btn btn-secondary btn-lg btn-block">Register Course</a>
     </div>
     <!-- /.sidebar-card__section -->
 
