--- a/src/njk/templates/partials/component/stats-col.njk
+++ b/src/njk/templates/partials/component/stats-col.njk
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-6 col-md-12 col-lg-6">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/clock-m.svg" alt="" />
                 <div class="stats__bold">Half-day Workshops</div>
                 <div class="stats__text">A new lineup of workshops that pack a big punch in half the time</div>
             </div>
@@ -11,7 +11,7 @@
         <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
 		<div class="col-sm-6 col-md-12 col-lg-6">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/license-m.svg" alt="" />
                 <div class="stats__bold">Certificate Programs</div>
                 <div class="stats__text">Learn a skill in-depth to augment or change your career</div>
             </div>
@@ -20,7 +20,7 @@
         <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
 		<div class="col-sm-6 col-md-12 col-lg-6">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/briefcase-m.svg" alt="" />
                 <div class="stats__bold">Professional Development</div>
                 <div class="stats__text">Technology, design, management, and communications courses that build skills</div>
             </div>
@@ -29,7 +29,7 @@
         <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
 		<div class="col-sm-6 col-md-12 col-lg-6">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/sun-m.svg" alt="" />
                 <div class="stats__bold">OLLI</div>
                 <div class="stats__text">Learning doesn’t stop at retirement either; courses to enrich the mind, body and soul</div>
             </div>
