--- a/src/njk/templates/partials/component/stats-row.njk
+++ b/src/njk/templates/partials/component/stats-row.njk
@@ -11,7 +11,7 @@
         <!-- /.col-md-3 -->
         <div class="col-sm-4 col-lg-3">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/book-p.svg" alt="" />
                 <div class="stats__bold">515</div>
                 <div class="stats__text">Classes</div>
             </div>
@@ -20,7 +20,7 @@
         <!-- /.col-sm-4 .col-md-3 -->
 		<div class="col-sm-4 col-lg-3">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/users-p.svg" alt="" />
                 <div class="stats__bold">20k+</div>
                 <div class="stats__text">Alumni</div>
             </div>
@@ -29,7 +29,7 @@
         <!-- /.col-sm-4 .col-md-3 -->
 		<div class="col-sm-4 col-lg-3">
             <div class="stats__item">
-                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <img class="stats__icon" src="{{ includePath }}images/icons/license-p.svg" alt="" />
                 <div class="stats__bold">XX</div>
                 <div class="stats__text">Certificate Courses</div>
             </div>
