--- a/src/njk/templates/partials/component/tabs-featured.njk
+++ b/src/njk/templates/partials/component/tabs-featured.njk
@@ -20,43 +20,43 @@
     <!-- Tab content-->
     <div class="tab-content" id="tabFeaturedContent">
         <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab">
-            <img src="{{ includePath }}images/icons/earth-y.svg" alt="" class="mb-3 icon-lg" />
+            <img src="{{ includePath }}images/icons/rocket-p.svg" alt="" class="mb-3 icon-lg" />
             <h3 class="heading">Invest in Yourself</h3>
             <div class="wysiwyg">
                 <p>Hundreds of professional and personal development courses and programs designed to maximize your learning and fit your busy schedule. Classes offered every month of the year, weekdays and weekends.</p>
             </div>
             <!-- /.wysiwyg -->
-            <a class="btn btn-lg btn-secondary" href="#">View Open Enrollment Courses</a>
+            <a class="btn btn-lg btn-secondary" href="courses.html">View Open Enrollment Courses</a>
         </div>
         <!-- /.tab-pane -->
         <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab">
-            <img src="{{ includePath }}images/icons/earth-y.svg" alt="" class="mb-3 icon-lg" />
+            <img src="{{ includePath }}images/icons/cog-p.svg" alt="" class="mb-3 icon-lg" />
             <h3 class="heading">Build Your Skills</h3>
             <div class="wysiwyg">
                 <p>Credentials are critical for your career—ECE presents a multitude of certificate programs ranging in duration from 5 days to a year, including many with flexible scheduling and payment options.</p>
             </div>
             <!-- /.wysiwyg -->
-            <a class="btn btn-lg btn-secondary" href="#">View Certificate Programs</a>
+            <a class="btn btn-lg btn-secondary" href="certificate-programs.html">View Certificate Programs</a>
         </div>
         <!-- /.tab-pane -->
         <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab">
-            <img src="{{ includePath }}images/icons/earth-y.svg" alt="" class="mb-3 icon-lg" />
+            <img src="{{ includePath }}images/icons/briefcase-p.svg" alt="" class="mb-3 icon-lg" />
             <h3 class="heading">At <em>Your</em> Location. On <em>Your</em> Schedule.</h3>
             <div class="wysiwyg">
                 <p>Discover the convenience of training when, how and where you need it. Emory Corporate Learning designs and delivers tailored professional development courses onsite to meet your company’s specific needs.</p>
             </div>
             <!-- /.wysiwyg -->
-            <a class="btn btn-lg btn-secondary" href="#">More About Corporate Learning</a>
+            <a class="btn btn-lg btn-secondary" href="corporate.html">More About Corporate Learning</a>
         </div>
         <!-- /.tab-pane -->
 		<div class="tab-pane fade" id="fourth" role="tabpanel" aria-labelledby="fourth-tab">
-            <img src="{{ includePath }}images/icons/earth-y.svg" alt="" class="mb-3 icon-lg" />
+            <img src="{{ includePath }}images/icons/leaf-p.svg" alt="" class="mb-3 icon-lg" />
             <h3 class="heading">For Adults 50+ Who Learn for Fun</h3>
             <div class="wysiwyg">
                 <p>Classes and social programs that nourish the mind, body and soul. Build friendships with others who live in the spirit of learning and personal growth.</p>
             </div>
             <!-- /.wysiwyg -->
-            <a class="btn btn-lg btn-secondary" href="#">View OLLI Classes</a>
+            <a class="btn btn-lg btn-secondary" href="olli.html">View OLLI Classes</a>
         </div>
         <!-- /.tab-pane -->
     </div>
