--- a/src/njk/templates/partials/form/search-filters.njk
+++ b/src/njk/templates/partials/form/search-filters.njk
@@ -1,31 +1,49 @@
 <form class="search-filters" id="searchFilters">
 
     <button class="btn btn-sm btn-block btn-outline-primary my-4">Clear filters</button>
-    
+
     <fieldset class="search-filters__fieldset">
         <legend class="search-filters__legend">Category</legend>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
-                Credibly envisioneer
+                Management and Supervision
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
             <label class="form-check-label" for="defaultCheck2">
-                Objectively communicate
+                Lean Six Sigma and Project Management
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
             <label class="form-check-label" for="defaultCheck3">
-                Dramatically grow
+                Test Preparation
             </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="defaultCheck4">
             <label class="form-check-label" for="defaultCheck4">
-                Holisticly
+                Fine Arts
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck5">
+            <label class="form-check-label" for="defaultCheck5">
+                Microsoft Office
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck6">
+            <label class="form-check-label" for="defaultCheck6">
+                Personal Enrichment
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck7">
+            <label class="form-check-label" for="defaultCheck7">
+                Foreign Languages
             </label>
         </div>
     </fieldset>
@@ -123,146 +141,146 @@
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck10-3">
+            <label class="form-check-label" for="defaultCheck10-3">
                 Dramatic Arts
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck11-3">
+            <label class="form-check-label" for="defaultCheck11-3">
                 Economics
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck12-3">
+            <label class="form-check-label" for="defaultCheck12-3">
                 Education
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck13-3">
+            <label class="form-check-label" for="defaultCheck13-3">
                 Engineering Science
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck14-3">
+            <label class="form-check-label" for="defaultCheck14-3">
                 Enterprise Management
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck15-3">
+            <label class="form-check-label" for="defaultCheck15-3">
                 Environmental Studies
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck16-3">
+            <label class="form-check-label" for="defaultCheck16-3">
                 Expository Writing
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck17-3">
+            <label class="form-check-label" for="defaultCheck17-3">
                 Finance
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck18-3">
+            <label class="form-check-label" for="defaultCheck18-3">
                 Languages
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck19-3">
+            <label class="form-check-label" for="defaultCheck19-3">
                 Government
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck20-3">
+            <label class="form-check-label" for="defaultCheck20-3">
                 History
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck21-3">
+            <label class="form-check-label" for="defaultCheck21-3">
                 History of Art and Architecture
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck22-3">
+            <label class="form-check-label" for="defaultCheck22-3">
                 Humanities
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck23-3">
+            <label class="form-check-label" for="defaultCheck23-3">
                 Information Systems Management
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck24-3">
+            <label class="form-check-label" for="defaultCheck24-3">
                 Journalism
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck25-3">
+            <label class="form-check-label" for="defaultCheck25-3">
                 Legal Studies
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck26-3">
+            <label class="form-check-label" for="defaultCheck26-3">
                 Management
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck27-3">
+            <label class="form-check-label" for="defaultCheck27-3">
                 Mathematics
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck28-3">
+            <label class="form-check-label" for="defaultCheck28-3">
                 Medical Sciences
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck29-3">
+            <label class="form-check-label" for="defaultCheck29-3">
                 Museum Studies
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck30-3">
+            <label class="form-check-label" for="defaultCheck30-3">
                 Organizational Behavior
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck31-3">
+            <label class="form-check-label" for="defaultCheck31-3">
                 Philosophy
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck32-3">
+            <label class="form-check-label" for="defaultCheck32-3">
                 Psychology
             </label>
         </div>
 		<div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck9-3">
-            <label class="form-check-label" for="defaultCheck9-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck33-3">
+            <label class="form-check-label" for="defaultCheck33-3">
                 Social Sciences
             </label>
         </div>
