--- a/src/njk/templates/partials/global/footer.njk
+++ b/src/njk/templates/partials/global/footer.njk
@@ -35,13 +35,13 @@
 
                 <ul class="footer__nav">
                     <li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link">Courses</a>
+                        <a href="courses.html" class="footer__nav-link">Courses</a>
 					</li>
 					<li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link">Certificate Programs</a>
+                        <a href="certificate-programs.html" class="footer__nav-link">Certificate Programs</a>
 					</li>
 					<li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link">Events</a>
+                        <a href="#" class="footer__nav-link">Info Sessions</a>
 					</li>
 					<li class="footer__nav-item">
                         <a href="about.html" class="footer__nav-link">About</a>
@@ -59,7 +59,10 @@
                         <a href="#" class="footer__nav-link">Policies & Procedures</a>
 					</li>
 					<li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link">OLLI</a>
+                        <a href="olli.html" class="footer__nav-link">OLLI</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="corporate.html" class="footer__nav-link">Corporate</a>
 					</li>
 					<li class="footer__nav-item">
                         <a href="#" class="footer__nav-link">Military</a>
