--- a/src/njk/templates/partials/snippet/photo-overlap.njk
+++ b/src/njk/templates/partials/snippet/photo-overlap.njk
@@ -1,12 +1,12 @@
 <div class="photo-overlap">
     <div class="photo">
         <figure class="image image-16by9">
-            <img src="https://placehold.it/1920x1080/007dba/ffffff?text=16:9" alt="placeholder" />
+            <img src="{{ includePath }}images/placeholders/class-laughing.jpg" alt="placeholder" />
         </figure>
     </div>
     <div class="photo photo-shift">
         <figure class="image image-16by9">
-            <img src="https://unsplash.it/1920/1080" alt="placeholder" />
+            <img src="{{ includePath }}images/placeholders/instructor-pointing.jpg" alt="placeholder" />
         </figure>
     </div>
 </div>
