--- a/src/njk/templates/partials/component/carousel-testimonial-2x.njk
+++ b/src/njk/templates/partials/component/carousel-testimonial-2x.njk
@@ -1,5 +1,5 @@
 <div id="carouselTestimonial2x" class="carousel slide carousel-testimonial-2x pt-5" data-ride="carousel">
-    
+
     <div class="text-center">
         <h2 class="heading mb-4">What Students Say about Us</h2>
     </div>
@@ -36,7 +36,7 @@
                         <div class="carousel-testimonial__name">Alex Hvostik</div>
                         <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
-                            "{% include "partials/wysiwyg/sentence-sm.njk" %}"
+                            “I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
@@ -60,7 +60,7 @@
                         <div class="carousel-testimonial__name">Alex Hvostik</div>
                         <div class="carousel-testimonial__title">Business Intelligence</div>
                         <div class="wysiwyg">
-                            "{% include "partials/wysiwyg/sentence-sm.njk" %}"
+                            “I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”
                         </div>
                         <!-- /.wysiwyg -->
                         <div class="carousel-testimonial__thumb">
