--- a/src/njk/templates/partials/global/navbar.njk
+++ b/src/njk/templates/partials/global/navbar.njk
@@ -38,7 +38,7 @@
           <span class="sr-only">(current)</span>{% endif %}
         </a>
         <div class="dropdown-menu" aria-labelledby="coursesDropdown">
-		  	<a class="dropdown-item{% if pageTitle == 'Courses' %} active{% endif %}" href="courses.html">Courses by Subject{% if pageTitle == 'Courses' %}<span class="sr-only">(current)</span>{% endif %}</a>
+		  	<a class="dropdown-item{% if pageTitle == 'Courses' %} active{% endif %}" href="courses.html">Browse Courses by Subject{% if pageTitle == 'Courses' %}<span class="sr-only">(current)</span>{% endif %}</a>
 			<a class="dropdown-item{% if pageTitle == 'Course Catalog' %} active{% endif %}" href="search.html">Search Courses{% if pageTitle == 'Course Catalog' %}<span class="sr-only">(current)</span>{% endif %}</a>
 			<a class="dropdown-item" href="#">Management and Supervision</a>
 			<a class="dropdown-item" href="#">Lean Six Sigma and Project Management</a>
@@ -48,37 +48,38 @@
 			<a class="dropdown-item" href="#">Microsoft Office</a>
 			<a class="dropdown-item" href="#">Personal Enrichment</a>
 			<a class="dropdown-item" href="#">Foreign Languages</a>
-			<a class="dropdown-item" href="#">OLLI (Ages 50+)</a>
+			<a class="dropdown-item{% if pageTitle == 'Defensive Driving Course (National Safety Council)' %} active{% endif %}" href="olli.html">OLLI (Ages 50+){% if pageTitle == 'Defensive Driving Course (National Safety Council)' %}<span class="sr-only">(current)</span>{% endif %}</a>
         </div>
       </li>
 
 	  <li class="nav-item dropdown{% if pageType == 'Certificate Programs' %} active{% endif %}">
-        <a class="nav-link dropdown-toggle" href="certificate-programs.html" id="programsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="certificate-programs.html" id="programsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Certificate Programs{% if pageTitle == 'Certificate Programs' %}
           <span class="sr-only">(current)</span>{% endif %}
         </a>
         <div class="dropdown-menu dropdown-menu-2col" aria-labelledby="programsDropdown">
 			<a class="dropdown-item{% if pageTitle == 'Certificate Programs' %} active{% endif %}" href="certificate-programs.html">All Certificate Programs{% if pageTitle == 'Certificate Programs' %}<span class="sr-only">(current)</span>{% endif %}</a>
-			<a class="dropdown-item" href="#">Big Data</a>
-			<a class="dropdown-item" href="#">Business Intelligence</a>
-			<a class="dropdown-item" href="#">Cybersecurity and Information Security</a>
-			<a class="dropdown-item" href="#">Health IT (AT-HIT)</a>
-			<a class="dropdown-item" href="#">Au Pair</a>
-			<a class="dropdown-item" href="#">Business Communications</a>
-			<a class="dropdown-item" href="#">Creative Writing</a>
-			<a class="dropdown-item" href="#">Digital Photography</a>
-			<a class="dropdown-item" href="#">Event Planning</a>
-			<a class="dropdown-item" href="#">Fundraising</a>
-			<a class="dropdown-item" href="#">Graphic Design</a>
-			<a class="dropdown-item" href="#">Health Coach</a>
-			<a class="dropdown-item" href="#">Essentials of HR Management</a>
-			<a class="dropdown-item" href="#">Landscape Design</a>
-			<a class="dropdown-item" href="#">Lean Six Sigma</a>
-			<a class="dropdown-item" href="#">Essentials of Management</a>
-			<a class="dropdown-item" href="#">Paralegal Studies</a>
-			<a class="dropdown-item" href="#">Project Management</a>
-			<a class="dropdown-item" href="#">Web Certificates</a>
+			<a class="dropdown-item{% if pageTitle == 'Accelerated Training in Big Data' %} active{% endif %}" href="program.html">Big Data{% if pageTitle == 'Accelerated Training in Big Data' %}<span class="sr-only">(current)</span>{% endif %}</a>
+			<a class="dropdown-item" href="program.html">Business Intelligence</a>
+			<a class="dropdown-item" href="program.html">Cybersecurity</a>
+			<a class="dropdown-item" href="program.html">Health IT</a>
+			<a class="dropdown-item" href="program.html">Au Pair</a>
+			<a class="dropdown-item" href="program.html">Business Communications</a>
+			<a class="dropdown-item" href="program.html">Creative Writing</a>
+			<a class="dropdown-item" href="program.html">Digital Photography</a>
+			<a class="dropdown-item" href="program.html">Event Planning</a>
+			<a class="dropdown-item" href="program.html">Fundraising</a>
+			<a class="dropdown-item" href="program.html">Graphic Design</a>
+			<a class="dropdown-item" href="program.html">Health Coach</a>
+			<a class="dropdown-item" href="program.html">HR Management</a>
+			<a class="dropdown-item" href="program.html">Landscape Design</a>
+			<a class="dropdown-item" href="program.html">Lean Six Sigma</a>
+			<a class="dropdown-item" href="program.html">Management</a>
+			<a class="dropdown-item" href="program.html">Supervision</a>
+			<a class="dropdown-item" href="program.html">Paralegal</a>
+			<a class="dropdown-item" href="program.html">Project Management</a>
+			<a class="dropdown-item" href="program.html">Web Design and Development</a>
+			<a class="dropdown-item" href="program.html">Digital Marketing</a>
         </div>
       </li>
 
@@ -87,9 +88,14 @@
           <span class="sr-only">(current)</span>{% endif %}</a>
       </li>
 
-	  <li class="nav-item{% if pageType == 'About' %} active{% endif %}">
-        <a class="nav-link" href="about.html">About{% if pageTitle == 'About ECE' %}
+	  <li class="nav-item dropdown{% if pageType == 'About' %} active{% endif %}">
+        <a class="nav-link dropdown-toggle" href="about.html" id="aboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			About{% if pageTitle == 'About ECE' %}
           <span class="sr-only">(current)</span>{% endif %}</a>
+		  <div class="dropdown-menu" aria-labelledby="aboutDropdown">
+		  	<a class="dropdown-item{% if pageTitle == 'About ECE' %} active{% endif %}" href="about.html">About ECE{% if pageTitle == 'About ECE' %}<span class="sr-only">(current)</span>{% endif %}</a>
+			 <a class="dropdown-item{% if pageTitle == 'Corporate Learning' %} active{% endif %}" href="corporate.html">Corporate Learning{% if pageTitle == 'Corporate Learning' %}<span class="sr-only">(current)</span>{% endif %}</a>
+		  </div>
       </li>
 
 	  <li class="nav-item{% if pageType == 'Contact' %} active{% endif %}">
